--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/tucsonCity.jpeg" alt="">
+            <img class="img-fluid" src="img/portfolio/sabinoCanyon.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Threads</h4>
-            <p class="text-muted">Illustration</p>
+            <h4>Event Scheduler App</h4>
+            <!-- <p class="text-muted">Illustration</p> -->
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -147,7 +147,7 @@
             <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Explore</h4>
+            <h4>Project #2</h4>
             <p class="text-muted">Graphic Design</p>
           </div>
         </div>
@@ -161,7 +161,7 @@
             <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Finish</h4>
+            <h4>Project #3</h4>
             <p class="text-muted">Identity</p>
           </div>
   </section>
@@ -387,13 +387,13 @@
                 <!-- Project Details Go Here -->
                 <h2 class="text-uppercase">People of Tucson Event Scheduler</h2>
                 <p class="item-intro text-muted">Find out whats the happs around tucson!</p>
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/tucsonCity.jpeg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/newTucson.jpg" alt="">
                 <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
                   blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia
                   expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                 <ul class="list-inline">
                   <li>Date: March 2019</li>
-                  <li>Client: Class Project</li>
+                  <li>Client: Class Project#1</li>
                   <li>Github: Application</li>
                   <a href="https://antfats.github.io/PeopleofTucsonEvents/">Github Link</a>
                 </ul>
