--- a/index.html
+++ b/index.html
@@ -388,9 +388,10 @@
                 <h2 class="text-uppercase">People of Tucson Event Scheduler</h2>
                 <p class="item-intro text-muted">Find out whats the happs around tucson!</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/newTucson.jpg" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
-                  blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia
-                  expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                <p>The problem my attempted to solve was the sheer fact that tucson has nothing to do! We created an app
+                  where users can post or view events. The user can click the "Show on map" button to make the map show
+                  the area where that specific event is located.
+                </p>
                 <ul class="list-inline">
                   <li>Date: March 2019</li>
                   <li>Client: Class Project#1</li>
