--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
   </nav>
 
   <!-- Header -->
-  <header class="masthead">
+
+  <header class="masthead parallax">
     <div class="container">
       <div class="intro-text">
         <div class="intro-lead-in">Hello There!</div>
@@ -118,7 +119,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Portfolio</h2>
+          <h2 class="section-heading text-uppercase">Projects</h2>
           <h3 class="section-subheading text-muted">Some work of mine.</h3>
         </div>
       </div>
@@ -134,7 +135,7 @@
           </a>
           <div class="portfolio-caption">
             <h4>Event Scheduler App</h4>
-            <!-- <p class="text-muted">Illustration</p> -->
+            <p class="text-muted">Fullstack application</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -144,11 +145,11 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/node.js.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Project #2</h4>
-            <p class="text-muted">Graphic Design</p>
+            <h4>Bamazon</h4>
+            <p class="text-muted">Made with Node.js and mySQL</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -238,13 +239,6 @@
                 </div>
               </div>
             </li>
-            <li class="timeline-inverted">
-              <div class="timeline-image">
-                <h4>Be Part
-                  <br>Of Our
-                  <br>Story!</h4>
-              </div>
-            </li>
           </ul>
         </div>
       </div>
@@ -252,32 +246,7 @@
   </section>
 
   <!-- Clients -->
-  <section class="py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3 col-sm-6">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/envato.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/designmodo.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/themeforest.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/creative-market.jpg" alt="">
-          </a>
-        </div>
-      </div>
-    </div>
-  </section>
+
 
   <!-- Contact -->
   <section id="contact">
@@ -394,9 +363,7 @@
                 </p>
                 <ul class="list-inline">
                   <li>Date: March 2019</li>
-                  <li>Client: Class Project#1</li>
-                  <li>Github: Application</li>
-                  <a href="https://antfats.github.io/PeopleofTucsonEvents/">Github Link</a>
+                  <a href="https://antfats.github.io/PeopleofTucsonEvents/">Github Repo Link</a>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
@@ -423,16 +390,13 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/02-full.jpg" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
-                  blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia
-                  expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                <h2 class="text-uppercase">Bamazon</h2>
+                <p class="item-intro text-muted">It's not Amazon!</p>
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/mysql.jpg" alt="">
+                <p>In this application I wanted to recreate a soft core amazon. It's a console application that uses mySQL to host a local database.</p>
                 <ul class="list-inline">
-                  <li>Date: January 2017</li>
-                  <li>Client: Explore</li>
-                  <li>Category: Graphic Design</li>
+                  <li>Date: April 2019</li>
+                  <a href="https://github.com/antfats/bamazon">Github Repo Link</a>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
