--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           </a>
           <div class="portfolio-caption">
             <h4>Bamazon</h4>
-            <p class="text-muted">Made with Node.js and mySQL</p>
+            <p class="text-muted">Fullstack Application</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -159,11 +159,11 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/fresh 4.png" alt="" style="margin-left:75px">
           </a>
           <div class="portfolio-caption">
-            <h4>Project #3</h4>
-            <p class="text-muted">Identity</p>
+            <h4>Eat-A-Fresh</h4>
+            <p class="text-muted">Fullstack Application</p>
           </div>
   </section>
 
@@ -231,8 +231,7 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>July 2014</h4>
-                  <h4 class="subheading">Today</h4>
+                  <h4>Present</h4>
                 </div>
                 <div class="timeline-body">
                   <p class="text-muted">As of today, I am constantly developing new applications and or websites.</p>
@@ -393,7 +392,8 @@
                 <h2 class="text-uppercase">Bamazon</h2>
                 <p class="item-intro text-muted">It's not Amazon!</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/mysql.jpg" alt="">
-                <p>In this application I wanted to recreate a soft core amazon. It's a console application that uses mySQL to host a local database.</p>
+                <p>In this application I wanted to recreate a soft core amazon. It's a console application that uses
+                  mySQL to host a local database.</p>
                 <ul class="list-inline">
                   <li>Date: April 2019</li>
                   <a href="https://github.com/antfats/bamazon">Github Repo Link</a>
@@ -423,20 +423,26 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/03-full.jpg" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
-                  blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia
-                  expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                <h2 class="text-uppercase" id="modalHeader">Eat-A-Fresh</h2>
+
+                <!-- <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p> -->
+
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/eat-a-fresh.PNG" alt="">
+                <p>Eat-A-Fresh is a fullstack application that I worked on in a group setting. We used many technologies
+                  that we picked up while creating this application. Some include Node.js, Sequelize, Handlebars,
+                  Javascript, HTML, CSS, as well as launching the application with Heroku. </p>
                 <ul class="list-inline">
-                  <li>Date: January 2017</li>
-                  <li>Client: Finish</li>
-                  <li>Category: Identity</li>
+                  <a href="https://evening-escarpment-38132.herokuapp.com/">Application Link</a>
+                  <br>
+
+                  <a href="https://github.com/tmolla/Eat-A-Fresh">GitHub Repo</a>
+
                 </ul>
+
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
                   Close Project</button>
+
               </div>
             </div>
           </div>
@@ -462,7 +468,8 @@
                 <h2 class="text-uppercase">Project Name</h2>
                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/04-full.jpg" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
+                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Est
                   blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia
                   expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                 <ul class="list-inline">
@@ -498,7 +505,8 @@
                 <h2 class="text-uppercase">Project Name</h2>
                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/05-full.jpg" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
+                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Est
                   blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia
                   expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                 <ul class="list-inline">
@@ -534,7 +542,8 @@
                 <h2 class="text-uppercase">Project Name</h2>
                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/06-full.jpg" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
+                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Est
                   blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia
                   expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                 <ul class="list-inline">
