added phone number and email at the contact me part

--- a/index.html
+++ b/index.html
@@ -253,7 +253,8 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Contact Me</h2>
-          <h3 class="section-subheading text-muted">I would love to work with you!</h3>
+          <h3 class="section-subheading" style="color:lightgray">Phone Number: 520-551-5369</h3>
+          <h3 class="section-subheading" style="color:lightgray">Email: antfats@hotmail.com</h3>
         </div>
       </div>
       <div class="row">
